<resources>
    <string name="app_name">GobangPos</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">SELESAI</string>

    <string name="slide_1_title">GO-BANG</string>
    <string name="slide_1_desc">Deskripsi GO-BANG</string>

    <string name="slide_2_title">Gambar</string>
    <string name="slide_2_desc">Aplikasi ini dilengkapi dengan gambar agar mudah dipahami.</string>

    <string name="slide_3_title">Deskripsi</string>
    <string name="slide_3_desc">Selain dilengkapi dengan gambar, dilengkapi pula dengan deskripsi penjelasan.</string>

    <string name="slide_4_title">Menu Slider</string>
    <string name="slide_4_desc">Pengguna dapat membuka halaman lain dengan hanya menggesernya tanpa harus keluar dari halaman terpilih.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomor_tilang">Nomor Tilang</string>
    <string name="d221098">D221098</string>
    <string name="nama">Nama</string>
    <string name="fathurrohman">Fathurrohman</string>
    <string name="jenis_kendaraan">Jenis Kendaraan</string>
    <string name="sepeda_motor">Sepeda Motor</string>
    <string name="barang_bukti">Barang Bukti</string>
    <string name="stnk">STNK</string>
    <string name="denda">Denda</string>
    <string name="rp">Rp 51.000</string>
    <string name="_22_oktober_2019">22 Oktober 2019</string>
    <string name="nik">NIK</string>
    <string name="detail">Detail Pembayaran</string>
    <string name="descpgm">POSGIRO Mobile dengan berbagai Layanan Keuangan dan Layanan Pos lainnya di Pos</string>
    <string name="masukan_kode_tilang_anda">Masukan Kode Tilang Anda</string>
    <string name="cari">Cari</string>
    <string name="tidak_ada_item_yang_di_pilih">Tidak ada item yang di pilih</string>
    <string name="desa">Desa</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="masukkan_nama_lengkap_penerima">Masukkan Nama Lengkap Penerima</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="silahkan_masukan_data_penerima_di_bawah_ini">Silahkan masukan data penerima di bawah ini</string>
    <string name="input_data_penerima">Input Data Penerima</string>
    <string name="alamat_pengiriman_barang_bukti">Alamat pengiriman barang bukti</string>
    <string name="provinsi">Provinsi</string>
    <string name="kabupaten_kota">Kabupaten / Kota</string>
    <string name="detail_alamat">Detail Alamat</string>
    <string name="mis_nama_gang_jalan_nomor_rumah">mis : nama gang, jalan, nomor rumah</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="cth_53181">Cth : 53181</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="cth_085123456789">Cth : 085123456789</string>
    <string name="lanjut">Lanjut</string>
    <string name="cth_no_rt_rw_no_rumah_nama_gang">cth : No RT/RW, no rumah, nama gang</string>
    <string name="segera_lakukan_pembayaran_dalam_waktu">Segera lakukan pembayaran dalam waktu</string>
    <string name="salin_no_rekening">Salin No. Rekening</string>
    <string name="transfer_ke_nomor_virtual_account">Transfer ke nomor Virtual Account :</string>
    <string name="_880800706386890">880800706386890</string>
    <string name="salin_nomor_virtual_account">Salin Nomor Virtual Account</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="rp_71_000">Rp 71.000</string>
    <string name="gobang">GobangPos adalah suatu aplikasi yang memudahkan masyarakat dalam pengambilan barang bukti tilang. Aplikasi ini merupakan aplikasi resmi yang dikeluarkan oleh Kejaksaan Negeri yang bekerja sama dengan Kantor Pos. Dengan menggunakan aplikasi ini, masyarakat dapat menghemat waktunya tanpa harus mengantre ambil bukti tilang.</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tentang_aplikasi_gobang">Tentang Aplikasi Gobang</string>
    <string name="pos_giro_mobile">Pos Giro Mobile</string>
    <string name="go_barang_bukti_dan_tilang">Go Barang Bukti dan Tilang</string>
    <string name="supported_by_pt_pos_indonesia">Supported by PT. POS Indonesia</string>
    <string name="cari_data_tilang">Cari Data Tilang</string>
    <string name="lacak_pengiriman">Lacak Pengiriman</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
</resources>
